[package]
name = "random_squares"
version = "0.1.0"
authors = ["MaciekTalaska <maciek.talaska@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
minifb = "0.11.2"
rand = "0.6.5"
tinyppm = "0.2.0"

[profile.dev]
debug = true
codegen-units = 4

[profile.release]
#opt-level = 'z'  # Optimize for size.
opt-level = 3
rpath = false
debug = false
debug-assertions = false
lto = true
codegen-units = 1
incremental = false